# Probabilistic_Lab

./: .gitignore  README  README.md
.devcontainer/: Dockerfile  devcontainer.json
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/my_cool_project/: CMakeLists.txt
src/my_cool_project/launch/: myfile.launch
src/my_cool_project/src/: main.cpp
src/sensor_fusion/: CMakeLists.txt  README  README.md  package.xml
src/sensor_fusion/cfg/: Motion_Model.cfg  Particle_Filter.cfg  Sensor_Model.cfg
src/sensor_fusion/config/: rviz_run.rviz  rviz_white_background_config.rviz
src/sensor_fusion/docs/: Progress.md
src/sensor_fusion/include/: Localization.cpp  Localization.h  Motion_Model.cpp  Motion_Model.h  Particle_Filter.cpp  Particle_Filter.h
src/sensor_fusion/include/classes/: Communication.cpp  Communication.h  Functions.h  Localization.cpp  Localization.h  Motion_Model.cpp  Motion_Model.h  Particle_Filter.cpp  Particle_Filter.h  Sensor_Model.cpp  Sensor_Model.h  Visualizer.cpp  Visualizer.h
src/sensor_fusion/include/structs/: Particle.h  Ray.h  States.h
src/sensor_fusion/launch/: gmapping.launch  move_base.launch  other_world.launch  particle_filter.launch  run_simulation.launch  test.launch
src/sensor_fusion/maps/: small_house.xml  small_house_1.yaml
src/sensor_fusion/measurements/: Particle_Resampling_Histogramm.csv
src/sensor_fusion/param/: motion_model_params.yaml
src/sensor_fusion/param/particle_filter_param/: general_params.yaml  sensor_model_params.yaml
src/sensor_fusion/scripts/: measure_euklidean_distance.py  move_in_circle.py  plot_histogram.py  pose_plotter.py
src/sensor_fusion/src/: Localization.cpp  Localization.h  main.cpp  my_test.cpp
src/sensor_fusion/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
src/sensor_fusion/world/: small_house.world
